; ModuleID = '/home/carl/AnghaBench/linux/drivers/power/supply/extr_wm831x_power.c_wm831x_syslo_irq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/power/supply/extr_wm831x_power.c_wm831x_syslo_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wm831x_power = type { %struct.wm831x* }
%struct.wm831x = type { i32 }

@.str = private unnamed_addr constant [22 x i8] c"SYSVDD under voltage\0A\00", align 1
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @wm831x_syslo_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wm831x_syslo_irq(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.wm831x_power*, align 8
  %6 = alloca %struct.wm831x*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.wm831x_power*
  store %struct.wm831x_power* %8, %struct.wm831x_power** %5, align 8
  %9 = load %struct.wm831x_power*, %struct.wm831x_power** %5, align 8
  %10 = getelementptr inbounds %struct.wm831x_power, %struct.wm831x_power* %9, i32 0, i32 0
  %11 = load %struct.wm831x*, %struct.wm831x** %10, align 8
  store %struct.wm831x* %11, %struct.wm831x** %6, align 8
  %12 = load %struct.wm831x*, %struct.wm831x** %6, align 8
  %13 = getelementptr inbounds %struct.wm831x, %struct.wm831x* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @dev_crit(i32 %14, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %16 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %16
}

declare dso_local i32 @dev_crit(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
